--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,14 @@ nbproject/*
 */cache/!index.html
 /nbproject/private/
 /.sass-cache/
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
