--- a/build.xml
+++ b/build.xml
@@ -44,6 +44,8 @@
                             lib/bootstrap.js,
                             lib/intro.js,
                             lib/wysihtml5.js,
+                            lib/jquery.color.js,
+                            lib/jquery.jcrop.js,
                             inc/turtle-general.js,
                             inc/turtle-creation.js,
                             inc/turtle-sorting.js,
