--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ Icon?
 ehthumbs.db
 Thumbs.db
 /assets/.archiver-28145AB5-E0C9-466C-BC47-098590EB3DE2-10219-000090CBECBC18A1/
+### /Users/nik/.gitignore-boilerplates/Global/PhPStorm.gitignore
+
+.idea/
+
