--- a/build.xml
+++ b/build.xml
@@ -52,7 +52,8 @@
                             inc/pane-general.js,
                             inc/pane-creation.js,
                             inc/pane-sorting.js,
-                            inc/turtle-signage.js"
+                            inc/turtle-signage.js,
+                            inc/turtle-pricelist.js"
                 excludes=""/>
         </concat>
         <echo>Finished</echo>
