--- a/build.xml
+++ b/build.xml
@@ -46,7 +46,7 @@
                             lib/wysihtml5.js,
                             lib/jquery.color.js,
                             lib/jquery.jcrop.js,
-                            lib/bootstrap-datepicker.js,
+                            lib/datepicker.js,
                             inc/turtle-general.js,
                             inc/turtle-creation.js,
                             inc/turtle-sorting.js,
