removed html 5 time pickers (they don;t work in a lot of browsers)

--- a/build.xml
+++ b/build.xml
@@ -47,6 +47,7 @@
                             lib/jquery.color.js,
                             lib/jquery.jcrop.js,
                             lib/datepicker.js,
+                            lib/jquery.ui.timepicker.js,
                             inc/turtle-general.js,
                             inc/turtle-creation.js,
                             inc/turtle-sorting.js,
