--- a/build.xml
+++ b/build.xml
@@ -36,6 +36,7 @@
         <copy file="${src.js.dir}/lib/jquery-ui-1.9.1.js" tofile="${build.dir}/js/jquery-ui.js"/>
         <copy file="${src.js.dir}/lib/spectrum.js" tofile="${build.dir}/js/spectrum.js"/>
         <copy file="${src.js.dir}/lib/jquery-ui-touch-punch.js" tofile="${build.dir}/js/jquery-ui-touch-punch.js"/>
+        <copy file="${src.js.dir}/lib/jquery.timepicker.js" tofile="${build.dir}/js/jquery.timepicker.js"/>
         <concat destfile="${build.dir}/js/script.js">
             <fileset
                 dir="${src.js.dir}"
@@ -47,6 +48,7 @@
                             lib/jquery.color.js,
                             lib/jquery.jcrop.js,
                             lib/bootstrap-datepicker.js,
+                            lib/jquery.timepicker.js,
                             inc/turtle-general.js,
                             inc/turtle-creation.js,
                             inc/turtle-sorting.js,
